--- a/src/styles.css
+++ b/src/styles.css
@@ -6,6 +6,10 @@
 
 body {
     background-color: orange;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
 
 header {
@@ -16,6 +20,24 @@ header {
     align-items: center;
 }
 
+nav {
+    margin: 1em;
+    display: flex;
+    gap: 1.5em;
+}
+
+nav button {
+    padding: 10px;
+    border-radius: 10px;
+    border: none;
+    transition: ease 0.2s background;
+}
+
+nav button:hover {
+    background: rgba(0, 0, 0, 0.269);
+    cursor: pointer;
+}
+
 #content {
     width: 100%;
     height: 100%;
@@ -24,9 +46,39 @@ header {
     justify-content: center;
     align-items: center;
     gap: 2em;
+    border: 1px solid black;
+    padding: 1em;
+    width: 90vw;
 }
 
 .pizza {
     width: 50vw;
     height: 50vh;
+}
+
+.menu-section {
+    border: 2px solid black;
+    
+}
+
+.menu-section h2, .menu-item {
+    border-bottom: 2px solid black;
+}
+
+.menu-section h2 {
+    padding: 0.6em;
+    font-size: 2rem;
+}
+
+.menu-item {
+    padding: 0.4em;
+}
+
+.menu-text {
+    font-size: 3.4rem;
+}
+
+.menu {
+    display: flex;
+    gap: 2em;
 }
